Drop 1.16 & 1.17 support